change collectors.toList() to java 17 toList()